feat: update the navigation UI